--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,8 +27,8 @@
           </div>
 
           <nav>
-            <a href="{{ site.baseurl }}/">Blog</a>
-            <a href="{{ site.baseurl }}/about">Modelling</a>
+            <!--<a href="{{ site.baseurl }}/">Blog</a>-->
+            <a href="{{ site.baseurl }}/about">Model</a>
             <a href="{{ site.baseurl }}/about">Team</a>
             <a href="{{ site.baseurl }}/about">About</a>
           </nav>
