--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,8 +28,8 @@
 
           <nav>
             <!--<a href="{{ site.baseurl }}/">Blog</a>-->
-            <a href="{{ site.baseurl }}/about">Model</a>
-            <a href="{{ site.baseurl }}/about">Team</a>
+            <a href="{{ site.baseurl }}/model">Model</a>
+            <a href="{{ site.baseurl }}/team">Team</a>
             <a href="{{ site.baseurl }}/about">About</a>
           </nav>
         </header>
