--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
             <!--<a href="{{ site.baseurl }}/">Blog</a>-->
             <a href="{{ site.baseurl }}/map">Map</a>
             <a href="{{ site.baseurl }}/model">Model</a>
-            <a href="{{ site.baseurl }}/team">Team</a>
+            <!--<a href="{{ site.baseurl }}/team">Team</a>-->
             <a href="{{ site.baseurl }}/about">About</a>
           </nav>
         </header>
