--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,8 +28,11 @@
 
           <nav>
             <!--<a href="{{ site.baseurl }}/">Blog</a>-->
-            <a href="{{ site.baseurl }}/map">Map</a>
-            <a href="{{ site.baseurl }}/model">Model</a>
+            <a href="{{ site.baseurl }}/pd">PD</a>
+            <a href="{{ site.baseurl }}/af">AF</a>
+            <a href="{{ site.baseurl }}/er">ER</a>
+            <a href="{{ site.baseurl }}/gallery">Gallery</a>
+            <a href="{{ site.baseurl }}/pd2af">PD2AF</a>
             <a href="{{ site.baseurl }}/team">Team</a>
             <a href="{{ site.baseurl }}/about">About</a>
           </nav>
