--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,9 +31,9 @@
             <a href="{{ site.baseurl }}/pd">PD</a>
             <a href="{{ site.baseurl }}/af">AF</a>
             <a href="{{ site.baseurl }}/er">ER</a>
-            <a href="{{ site.baseurl }}/gallery">Gallery</a>
+            <a href="{{ site.baseurl }}/patterns">Patterns</a>
+            <a href="{{ site.baseurl }}/gallery">Dictionary</a>
             <a href="{{ site.baseurl }}/pd2af">PD2AF</a>
-            <a href="{{ site.baseurl }}/team">Team</a>
             <a href="{{ site.baseurl }}/about">About</a>
           </nav>
         </header>
