--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,6 +32,7 @@
             <a href="{{ site.baseurl }}/af">AF</a>
             <a href="{{ site.baseurl }}/er">ER</a>
             <a href="{{ site.baseurl }}/dictionary">Dictionary</a>
+            <a href="{{ site.baseurl }}/advanced">Advanced</a>
             <a href="{{ site.baseurl }}/pd2af">PD2AF</a>
             <a href="{{ site.baseurl }}/about">About</a>
           </nav>
