--- a/style.scss
+++ b/style.scss
@@ -130,15 +130,17 @@ img {
   background: $lightGray;
 }
 
+// Nicolas Gallagher's micro clearfix hack
+// http://nicolasgallagher.com/micro-clearfix-hack/
+.clearfix:before,
+.clearfix:after {
+    content: " ";
+    display: table;
+}
 
-
-
-
-
-
-
-
-
+.clearfix:after {
+    clear: both;
+}
 
 /*********************/
 /* LAYOUT / SECTIONS */
@@ -160,10 +162,6 @@ img {
     text-align: center;
   }
 }
-
-
-
-
 
 .site-info {
   float: left;
