--- a/style.scss
+++ b/style.scss
@@ -266,6 +266,27 @@ footer {
   text-align: center;
 }
 
+div.parent{ 
+    display:table;
+    padding:5px; 
+    margin:5px 0; /* you can change/remove margin */
+}
+div.text{ 
+    vertical-align:middle;
+    display:table-cell;
+    text-align:justify;
+    font-size:14px;
+}
+div.parent .img{
+    vertical-align:middle;
+    display:table-cell;
+    padding-right:5px;
+}
+div.img img{ 
+    width:200px;
+    vertical-align:middle;
+}
+
 // Settled on moving the import of syntax highlighting to the bottom of the CSS
 // ... Otherwise it really bloats up the top of the CSS file and makes it difficult to find the start
 @import "highlights";
