--- a/style.scss
+++ b/style.scss
@@ -288,6 +288,23 @@ div.img img{
     vertical-align:middle;
 }
 
+table {
+  width:100%;
+  border-collapse:collapse;
+}
+th, td {
+  text-align:left;
+  padding:5px 10px;
+  border-bottom:1px solid #e5e5e5;
+}
+dt {
+  color:#444;
+  font-weight:700;
+}
+th {
+  color:#444;
+}
+
 // Settled on moving the import of syntax highlighting to the bottom of the CSS
 // ... Otherwise it really bloats up the top of the CSS file and makes it difficult to find the start
 @import "highlights";
