--- a/style.scss
+++ b/style.scss
@@ -283,6 +283,7 @@ div.parent .img{
 }
 div.img img{ 
     width:200px;
+    max-width:200px;
     align:center;
     font-size:14px;
     vertical-align:middle;
