--- a/style.scss
+++ b/style.scss
@@ -18,9 +18,10 @@ html {
 }
 
 body {
-	background: $white;
+  background: $white;
   font: 16px/1.4 $helvetica;
   color: $darkGray;
+  text-align: justify;
 }
 
 .container {
