--- a/style.scss
+++ b/style.scss
@@ -276,6 +276,7 @@ div.text{
     vertical-align:middle;
     display:table-cell;
     font-size:16px;
+    text-align: justify;
 }
 div.parent .img{
     vertical-align:middle;
