--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,7 @@
             <a href="{{ site.baseurl }}/er">ER</a>
             <a href="{{ site.baseurl }}/dictionary">Dictionary</a>
             <a href="{{ site.baseurl }}/downloads">Downloads</a>
-            <a href="{{ site.baseurl }}/pd2af">PD2AF</a>
+            <!--<a href="{{ site.baseurl }}/pd2af">PD2AF</a>-->
             <a href="{{ site.baseurl }}/about">About</a>
           </nav>
         </header>
